--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -41,9 +41,7 @@
     <br/>
     <div>
         <label>
-            <form method="get" th:action="@{/edit-user-profile}">
-                <button class="btn btn-primary">Edit Profile</button>
-            </form>
+            <a class="btn btn-primary" th:href="@{/edit-user-profile}">Edit Profile</a>
         </label>
     </div>
 </div>
