--- a/src/main/resources/templates/add-payment-card.html
+++ b/src/main/resources/templates/add-payment-card.html
@@ -4,13 +4,19 @@
 <body>
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
 <div class="container">
-    <h1 class="bold-white-text center-text" th:text="${banner}"></h1>
+    <h1 class="bold-white-text center-text">Add Payment Card</h1>
     <br/>
-    <form method="post" th:action="@{${action}}" th:object="${paymentCardForm}">
-        <label>
-            <input hidden th:field="*{paymentCardId}" th:value="${paymentCardId}">
-        </label>
+    <form method="post" th:action="@{/add-payment-card}" th:object="${paymentCardForm}">
         <table class="table table-bordered table-striped">
+            <tr>
+                <td>Payment Card Number:</td>
+                <td>
+                    <label>
+                        <input type="tel" pattern="[0-9]*"
+                               minlength="16" maxlength="16" th:field="*{cardNumber}" required>
+                    </label>
+                </td>
+            </tr>
             <tr>
                 <td>Payment Card Type:</td>
                 <td>
@@ -29,15 +35,6 @@
                     <label>
                         <input type="date" th:field="*{expirationDate}"
                                th:value="${minDate}" th:min="${minDate}" th:max="${maxDate}">
-                    </label>
-                </td>
-            </tr>
-            <tr>
-                <td>Payment Card Number:</td>
-                <td>
-                    <label>
-                        <input th:field="*{cardNumber}" type="password" maxlength="16" minlength="16"
-                               pattern="[0-9]*" required>
                     </label>
                 </td>
             </tr>
