--- a/src/main/resources/templates/delete-movie.html
+++ b/src/main/resources/templates/delete-movie.html
@@ -5,13 +5,18 @@
 <nav th:insert="fragments/webpage-top :: webpage-top"></nav>
 <div class="container">
     <div th:insert="fragments/back-to-management-page :: back-to-management-page"></div>
-    <h1>Movie: On Delete Info</h1>
-    <ul th:each="info:${onDeleteInfo}">
-        <li th:text="${info}"></li>
-    </ul>
     <h1>Deletion of this movie is FINAL and IRREVERSIBLE!</h1>
     <h1>Are you sure you want to delete this movie?</h1>
-    <button class="button" id="toggle">Confirm</button>
+    <br/>
+    <div>
+        <table class="table table-bordered table-striped">
+            <tr th:each="info:${onDeleteInfo}">
+                <td th:text="${info}"></td>
+            </tr>
+        </table>
+    </div>
+    <br/>
+    <button class="button" id="toggle">Yes, I Want to Delete this Movie</button>
 </div>
 <div id="confirmed" class="container" style="display: none">
     <h1>Click the button below to confirm deletion</h1>
