--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,35 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments/header :: header"></head>
 <body>
-<nav class="naviBar">
-    <a class="logo" th:href="@{/index}">
-        ECinema<span> Entertainment</span>
-    </a>
-    <a th:href="@{/index}">Home</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/movies}">Movies</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/theaters}">Theaters</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/about}">About</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-    <a th:href="@{/account}">Account</a>
-    &nbsp;
-    &nbsp;
-    &nbsp;
-</nav>
-
+<nav th:insert="fragments/webpage-top :: webpage-top"></nav>
+<div th:insert="fragments/errors :: errors"></div>
 </body>
 </html>
