--- a/src/main/resources/templates/book-seat.html
+++ b/src/main/resources/templates/book-seat.html
@@ -17,9 +17,9 @@
     </div>
     <br/>
     <div class="bold-white-text center-text">
-        <span>WARNING: A ticket CANNOT be refunded once the showtime is 3 days or less from now.</span>
+        <span>WARNING: A ticket CANNOT be refunded once the showtime is 3 days or less away.</span>
         <br/>
-        <span>However, you can still refund the ticket if the showtime is more than 3 days away from now.</span>
+        <span>However, you can still refund the ticket if the showtime is more than 3 days away.</span>
         <br/>
         <br/>
         <span>One token is equivalent to $1. Even if you have enough tokens to fully pay</span>
